fixed wrapping of course tags

--- a/style.scss
+++ b/style.scss
@@ -322,6 +322,7 @@ body {
         flex-direction: row;
         justify-content: center;
         padding: 5px 0;
+        flex-wrap: wrap;
     }
 
     &__tag {
